# rfvp

./: .gitignore  Cargo.toml  README.ja.md  README.md  README.zh-Hans.md  README.zh-Hant.md  book.toml  build_doc.sh  clean_platform.sh  div.rs  layouter.rs  lib.rs  lz77.rs  nop.rs  push_i8.rs  ret.rs
assembler/: Cargo.toml  README.md
assembler/src/: inst.rs  main.rs  utils.rs
crates/anzu-hal/: Cargo.toml
crates/anzu-hal/src/: decode.rs  lib.rs  mixer.rs  task.rs
crates/hcb2lua_decompiler/: Cargo.toml  README.md
crates/hcb2lua_decompiler/src/: analysis.rs  cfg.rs  decode.rs  lua.rs  lua_opt.rs  main.rs  opcode.rs  parser.rs
crates/lua2hcb_compiler/: Cargo.toml  README.md
crates/lua2hcb_compiler/src/: asm.rs  compile.rs  ir.rs  lua.rs  main.rs  meta.rs
crates/luax-lsp/: Cargo.toml  README.md
crates/luax-lsp/examples/: main.luax  project.yaml
crates/luax-lsp/src/: analysis.rs  config.rs  main.rs  source.rs  syntax.rs  workspace.rs
crates/na_mpeg2_decoder/: Cargo.toml
crates/na_mpeg2_decoder/examples/: png_dump.rs
crates/na_mpeg2_decoder/src/: av.rs  convert.rs  error.rs  lib.rs  pipeline.rs
crates/na_wmv_player/: Cargo.toml
crates/na_wmv_player/src/: api.rs  asf.rs  bitreader.rs  decoder.rs  error.rs  ffi.rs  lib.rs  na_msmpeg4_mv_tables.rs  na_msmpeg4_tables.rs  na_rl_tables.rs  na_simple_idct.rs  na_wmv2_tables.rs  na_wmv2dsp.rs  vc1.rs  vlc.rs  vlc_tree.rs  wmv2.rs
crates/nvsg_pack/: Cargo.toml  README.md
crates/nvsg_pack/src/: main.rs
crates/rfvp-3ds/: Cargo.toml  armv6k-nintendo-3ds-rfvp.json  build-3ds.sh
crates/rfvp-3ds/c/: entrypoint.c  libctru_backend.c  libctru_backend.h
crates/rfvp-3ds/src/: allocator.rs  app.rs  audio.rs  clock.rs  entry.rs  event.rs  fs.rs  host.rs  lib.rs  raw.rs  render.rs  status.rs  viewport.rs
crates/rfvp-bitmap/: Cargo.toml
crates/rfvp-bitmap/src/: lib.rs
crates/rfvp-horizon/: Cargo.toml  build.rs
crates/rfvp-horizon/src/: app.rs  audio.rs  clock.rs  event.rs  fs.rs  host.rs  lib.rs  main.rs  render.rs  status.rs
crates/rfvp-ps2/: Cargo.toml  build-ps2.sh  mipsel-sony-ps2-rfvp.json
crates/rfvp-ps2/c/: entrypoint.c  ps2sdk_backend.c  ps2sdk_backend.h
crates/rfvp-ps2/src/: app.rs  audio.rs  clock.rs  entry.rs  event.rs  fs.rs  host.rs  lib.rs  raw.rs  render.rs  status.rs  viewport.rs
crates/rfvp-ps3/: Cargo.toml  build-ps3.sh  powerpc64-sony-ps3-rfvp.json
crates/rfvp-ps3/c/: entrypoint.c  psl1ght_backend.c  psl1ght_backend.h
crates/rfvp-ps3/src/: allocator.rs  app.rs  audio.rs  clock.rs  entry.rs  event.rs  fs.rs  host.rs  lib.rs  render.rs  status.rs
crates/rfvp-psp/: Cargo.toml  build-psp.sh
crates/rfvp-psp/src/: app.rs  audio.rs  clock.rs  event.rs  fs.rs  host.rs  lib.rs  main.rs  platform.rs  raw.rs  render.rs  status.rs  viewport.rs
crates/rfvp-psv/: Cargo.toml  README.md  build.rs
crates/rfvp-psv/.cargo/: config.toml
crates/rfvp-psv/c/: rfvp_psv_c.c  rfvp_psv_c.h  rfvp_psv_vitasdk.c
crates/rfvp-psv/src/: alloc.rs  app.rs  audio.rs  clock.rs  event.rs  fs.rs  host.rs  lib.rs  main.rs  raw.rs  render.rs  status.rs
crates/rfvp-rebuilder/: Cargo.toml
crates/rfvp-rebuilder/src/: main.rs
crates/rfvp-wii/: Cargo.toml  build-wii.sh  powerpc-nintendo-wii-rfvp.json
crates/rfvp-wii/c/: entrypoint.c  libogc_backend.c  libogc_backend.h
crates/rfvp-wii/src/: app.rs  audio.rs  clock.rs  entry.rs  event.rs  fs.rs  host.rs  lib.rs  raw.rs  render.rs  status.rs  viewport.rs
crates/rfvp-wiiu/: Cargo.toml  build-wiiu.sh  powerpc-nintendo-wiiu-rfvp.json
crates/rfvp-wiiu/c/: entrypoint.c  wut_backend.c  wut_backend.h
crates/rfvp-wiiu/src/: allocator.rs  app.rs  audio.rs  clock.rs  entry.rs  event.rs  fs.rs  host.rs  lib.rs  render.rs  status.rs
decompiler/: Cargo.toml
decompiler/src/: main.rs
decompiler/src/reisa/: mod.rs  opcode.rs  variant.rs
rfvp/: Cargo.toml
rfvp-audio/: Cargo.toml
rfvp-audio/src/: data.rs  handle.rs  lib.rs  manager.rs  sound.rs
rfvp-core/: Cargo.toml
rfvp-core/src/: lib.rs  types.rs
rfvp-core/src/format/: mod.rs  vfs.rs
rfvp-core/src/layout/: layouter.rs
rfvp-core/src/time/: mod.rs
rfvp-core/src/vm/: mod.rs
rfvp-debugger/: Cargo.toml
rfvp-debugger/src/: lib.rs  ui.rs
rfvp-debugger/src/capture/: dummy_capture.rs  mod.rs  unix_capture.rs  windows_capture.rs
rfvp-render/: Cargo.toml
rfvp-render/src/: camera.rs  common_resources.rs  lib.rs  pillarbox.rs  render_target.rs  vertex_buffer.rs  vertices.rs
rfvp-render/src/pipelines/: text.rs  text_outline.rs
rfvp-script/: Cargo.toml
rfvp-script/src/: lib.rs  parser.rs  variant.rs
rfvp-script/src/format/: layout.rs  mod.rs  parsed.rs  probe.rs
rfvp-script/src/syscall/: mod.rs  registry.rs
rfvp-script/src/test/: mod.rs
rfvp-script/src/vm/: mod.rs  opcode.rs  thread.rs
rfvp-script/tests/: parse_testcase.rs
rfvp-tasks/: Cargo.toml
rfvp-tasks/src/: lib.rs  slice.rs  task_pool.rs  thread_executor.rs
rfvp-video/: Cargo.toml
rfvp-video/examples/play/: main.rs
rfvp-video/src/: audio.rs  video_player.rs  yuv_texture.rs
rfvp-video/src/h264_decoder/: gstreamer.rs  mod.rs  spawn_ffmpeg.rs  y4m.rs
rfvp-wrld/: Cargo.toml
rfvp-wrld/src/: converter.rs  macros.rs  parser.rs
rfvp/src/: app.rs  cli.rs  lib.rs  main.rs  update.rs  window.rs
rfvp/src/adv/: assets.rs  mod.rs
rfvp/src/asset/: audio.rs  bustup.rs  font.rs  locate.rs  mod.rs  movie.rs  picture.rs  scenario.rs  server.rs  texture_archive.rs
rfvp/src/audio/: bgm_player.rs  se_player.rs
rfvp/src/audio_player/: bgm_player.rs  se_player.rs
rfvp/src/config/: window_config.rs
rfvp/src/layer/: bustup_layer.rs  layer_group.rs  mod.rs  movie_layer.rs  null_layer.rs  page_layer.rs  picture_layer.rs  root_layer_group.rs  screen_layer.rs  tile_layer.rs
rfvp/src/render/: dynamic_atlas.rs  overlay.rs
rfvp/src/rendering/: mod.rs  overlay.rs  renderer_state.rs  shader.wgsl  shinku2d.rs
rfvp/src/script/: context.rs  mod.rs  opcode.rs  parser.rs
rfvp/src/subsystem/: anzu_scene.rs  audio_controller.rs  (+4 more)
rfvp/testcase/: BGS016a_parts  gaiji_heart156
video_player/: Cargo.toml
video_player/src/: main.rs
(+3232 files in other folders)
