[package]
name = "rfvp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/xmoezzz/rfvp"
description = "A Non-Official Rust cross-platform implementation of the FVP engine"
repository = "https://github.com/xmoezzz/rfvp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
encoding_rs = "0.8.33"
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
bincode = "1.3.3"
twofloat = "0.7.0"
winit = {version = "0.29.10", features = ["rwh_05"]}
wgpu = { version = "0.19.1", features = ["spirv"] }
glob = "0.3.1"
atomic_refcell = "0.1.13"
downcast-rs = "1.2.0"
hecs = "0.10.4"
image = "0.24.8"
bytemuck = { version = "1.14.3", features = ["derive"] }
ultraviolet = "0.9.2"
rodio = "0.17.3"
ab_glyph = "0.2.23"
futures = "0.3.30"
fern = { version = "0.6.2", features = ["colored"] }

mpeg2ts = "0.3.1"
flate2 = "1.0.28"
byteorder = "1.5.0"
rand = "0.8.5"
lazy_static = "1.4.0"
fontdue = "0.8.0"
