[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
rfvp = { path = "../rfvp" }

env_logger = "0.11.3"
log = "0.4.21"
