[package]
name = "rfvp-audio"
version = "0.6.1"
edition = "2021"
description = "Kira audio sources for rfvp Engine"
license = "MPL-2.0"
authors = ["DCNick3", "xmoe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfvp-core = { path = "../rfvp-core" }
rfvp-tasks = { path = "../rfvp-tasks" }

anyhow = { workspace = true }
tracing = "0.1.40"

kira = { workspace = true, features = ["cpal"] }
ringbuf = "0.4.1"

