[package]
name = "rfvp-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfvp-core = { path = "../rfvp-core" }
# shin-tasks = { path = "../shin-tasks" }

anyhow = "*"
tracing = "0.1.37"

kira = "0.10.8"
ringbuf = "0.3.1"