[package]
name = "rfvp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
num-traits = "0.2.15"
num-derive = "0.4.0"
float-ord = "0.3.2"
tracing = "0.1.37"
bytemuck = { version = "1.12.1", features = ["derive"] }
derive_more = "0.99.17"
binrw = "0.13.3"
bitflags = "2.5.0"
proc-bitfield = "0.4.0"
opus = "0.3.0"