[package]
name = "rfvp-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
crossbeam-channel = "0.5"
anyhow = "1.0"
libc = "0.2.175"

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
