[package]
name = "rfvp-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tracing = "0.1.37"

rfvp-core = { path = "../rfvp-core" }

winit = {version = "0.29.10", features = ["rwh_05"]}
wgpu = { version = "0.19.1", features = ["spirv"] }
# TODO: this can be reimplemented in shin-derive (I want to have my own traits for this anyways)
wrld = { package = "rfvp-wrld", path = "../rfvp-wrld" }

glam = { version = "0.27.0", features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck", "scalar-math"
] }
bytemuck = { version = "1.15.0", features = ["derive"] }

bevy_utils = "0.13.2"
once_cell = "1.17.1"
image = "0.24.9"
