[package]
name = "rfvp-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.4.0"
async-executor = "1.3.0"
async-channel = "1.4.2"
async-task = "4.2.0"
once_cell = "1.7"
concurrent-queue = "2.0.0"
tracing = "0.1.37"
