[package]
name = "rfvp-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp4 = "0.14.0"
symphonia = { version = "0.5.2", features = ["aac"], default-features = false }

rfvp-render = { path = "../rfvp-render" }
rfvp-core = { path = "../rfvp-core" }
rfvp-audio = { path = "../rfvp-audio" }
rfvp-tasks = { path = "../rfvp-tasks" }

gst = { package = "gstreamer", version = "0.21.1", optional = true }
gst-app = { package = "gstreamer-app", version = "0.21.1", optional = true}
gst-video = { package = "gstreamer-video", version = "0.21.1", optional = true }

tracing-gstreamer = { version = "0.6.0", optional = true }

wgpu = { version = "0.19.1", features = ["spirv"] }
kira = { version = "0.8.5", default-features = false }
glam = { version = "0.27.0", features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck", "scalar-math"
] }

anyhow = "*"
once_cell = "1.18.0"
cfg-if = "1.0.0"
bytes = "1.5.0"
tracing = "0.1.37"
which = "5.0.0"

async-process = "1.6.0"
futures-lite = "1.12.0"
num-integer = "0.1.45"

[features]
gstreamer = [
    "dep:gst",
    "dep:gst-app",
    "dep:gst-video",
    "dep:tracing-gstreamer",
]
