[package]
name = "rfvp-wrld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dev_dependencies]
trybuild = {version = "1.0", features = ["diff"]}

[dependencies]
const_format = "0.2.26"
syn = {version = "1.0.99", features = ["extra-traits"]}
quote = "1.0.21"
proc-macro2 = "1.0.43"
wgpu = { version = "0.19.1", features = ["spirv"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
regex = "1.6.0"
phf = {version = "0.11", features = ["macros"]}
