[package]
name = "rfvp"
version = "0.6.1"
edition = "2021"
description = "rfvp"
license = "MPL-2.0"
authors = ["DCNick3", "xmoe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rfvp-core = { path = "../rfvp-core" }
rfvp-render = { path = "../rfvp-render" }
rfvp-derive = { path = "../rfvp-derive" }
rfvp-tasks = { path = "../rfvp-tasks" }
rfvp-audio = { path = "../rfvp-audio" }
rfvp-video = { path = "../rfvp-video" }

anyhow = { workspace = true }
async-trait = "0.1.81"
futures = "0.3.30"
smallvec = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
arrayvec = "0.7.4"
bytes = { workspace = true }
cfg-if = "1.0.0"
clap = { version = "4.5.9", features = ["derive"] }
clap-num = "1.1.1"
dirs-next = "2.0.0"

winit = { workspace = true }
wgpu = { workspace = true }
etagere = "0.2.13"

glam = { workspace = true, features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck", "scalar-math"
] }
bytemuck = { workspace = true, features = ["derive"] }
image = { workspace = true, default-features = false }

# Theese part of bevy does not depend on ECS or the reflection, so it's not a big problem to use them
bevy_utils = { workspace = true }

pollster = "0.3.0"

num-derive = "0.4.2"
num-traits = "0.2.19"
enum-map = { workspace = true }
derive_more = "0.99.18"
enum_dispatch = "0.3.13"
strum = { workspace = true }
anymap = "1.0.0-beta.2"
derivative = "2.2.0"
serde = "1.0.204"

itertools = { workspace = true }
once_cell = "1.19.0"
petitset = "0.2.1"

egui = { workspace = true }
egui-wgpu = { workspace = true }
# used for implementation of dynamic atlas overlay
usvg = "0.36.0"

# kira for audio output
kira = { workspace = true }

[features]
default = []
gstreamer-video = ["rfvp-video/gstreamer"]

[package.metadata.release]
# this crate is not ready for publishing yet
# (it has git dependencies)
publish = false
