[package]
name = "rfvp"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/xmoezzz/rfvp"
description = "A Non-Official Rust cross-platform implementation of the FVP engine"
repository = "https://github.com/xmoezzz/rfvp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rfvp"
path = "src/lib.rs"

[[bin]]
name = "rfvp"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
encoding_rs = "0.8.33"
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
bincode = "1.3.3"
twofloat = "0.7.0"
winit = {version = "0.30.5", features = ["rwh_05"]}
wgpu = { version = "0.19.1", features = ["spirv"] }
glob = "0.3.1"
atomic_refcell = "0.1.13"
hecs = "0.10.4"
image = "0.24.9"
bytes = "1.6.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
ultraviolet = "0.9.2"
rodio = "0.17.3"
futures = "0.3.30"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.35"

flate2 = "1.0.28"
byteorder = "1.5.0"
rand = "0.8.5"
lazy_static = "1.4.0"
fontdue = { git = "https://github.com/xmoezzz/fontdue" }
openh264 = "=0.4.4"
mp4 = "0.14.0"
fdk-aac = "0.6.0"
env_logger = "0.11.3"
egui = "0.27.2"
eframe = "0.27.2"
bevy_utils = "0.13.2"
egui-wgpu = "0.27.2"
glam = { version = "0.27.0", features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck", "scalar-math"
] }
enum-map = "2.7.3"
itertools = "0.12.1"
petitset = "0.2.1"
tracing = "0.1.37"
kira = "0.10.8"

crossterm = "0.29.0"
ratatui = "0.29.0"

pollster = "0.4.0"

rfvp-render = { path = "../rfvp-render" }
rfvp-core = { path = "../rfvp-core" }
rfvp-audio = { path = "../rfvp-audio" }
rfvp-debugger = { path = "../rfvp-debugger" }
bitflags = "2.9.4"

[profile.test]
inherits = "release"
