[package]
name = "video_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
winit = {version = "0.29.10", features = ["rwh_05"]}
wgpu = { version = "0.19.1", features = ["spirv"] }
futures = "0.3.30"
image = "0.24.9"
rfvp = { path = "../rfvp" }

env_logger = "0.11.3"
