[package]
name = "video_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
winit = {version = "0.29.10", features = ["rwh_05"]}
wgpu = { version = "0.19.1", features = ["spirv"] }
futures = "0.3.30"
image = "0.24.9"
rodio = "0.17.3"
rfvp = { path = "../rfvp" }

env_logger = "0.11.3"
glam = { version = "0.27.0", features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck", "scalar-math"
] }
kira = { version = "0.8.5", features = ["cpal"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
pollster = "0.3.0"

rfvp-render = { path = "../rfvp-render" }
rfvp-core = { path = "../rfvp-core" }
rfvp-audio = { path = "../rfvp-audio" }
rfvp-video = { path = "../rfvp-video", features = ["gstreamer"]}
rfvp-tasks = { path = "../rfvp-tasks" }