[package]
name = "na_mpeg2_decoder"
version = "0.1.0"
edition = "2021"
description = "Rust MPEG-1/2 video decoder"

[lib]
name = "na_mpeg2_decoder"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
log = "0.4"
byteorder = "1"

# Audio decode is delegated to Symphonia (MP1/2/3).
symphonia = { version = "0.5.5", features = ["mpa"] }

crossbeam-channel = { version = "0.5", optional = true }
pollster = { version = "0.3", optional = true }
winit = { version = "0.29", features = ["rwh_05"], optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1", optional = true }
rodio = { version = "0.17", optional = true }
env_logger = { version = "0.11", optional = true }
png = { version = "0.17", optional = true }

[features]
default = []

desktop-bins = [
  "dep:crossbeam-channel",
  "dep:pollster",
  "dep:winit",
  "dep:wgpu",
  "dep:bytemuck",
  "dep:rodio",
  "dep:env_logger",
  "dep:png",
]

[[bin]]
name = "mpeg2_player_wgpu"
path = "src/bin/mpeg2_player_wgpu.rs"
required-features = ["desktop-bins"]

[[example]]
name = "png_dump"
path = "examples/png_dump.rs"
required-features = ["desktop-bins"]
