[package]
name = "wmv-decoder"
version = "0.2.0"
edition = "2021"

[lib]
name = "wmv_decoder"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
log = "0.4"

crossbeam-channel = { version = "0.5", optional = true }
pollster = { version = "0.3", optional = true }
winit = { version = "0.29", features = ["rwh_05"], optional = true }
wgpu = "0.19"
bytemuck = { version = "1.16", features = ["derive"] }
cpal = "0.15"
ringbuf = "0.4"
anyhow = "1.0"
env_logger = "0.10"
png = "0.17"

[features]
desktop-bins = [
  "dep:crossbeam-channel",
  "dep:pollster",
  "dep:winit",
]

[[bin]]
name = "wmv-decoder"
path = "src/bin/wmv_decoder_cli.rs"
required-features = ["desktop-bins"]

[[bin]]
name = "wmv-player-wgpu"
path = "src/bin/wmv_player_wgpu.rs"
required-features = ["desktop-bins"]
