[package]
name = "wmv-decoder"
version = "0.2.0"
edition = "2021"

[lib]
name = "wmv_decoder"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
log = "0.4"

crossbeam-channel = { version = "0.5", optional = true }
pollster = { version = "0.3", optional = true }
winit = { version = "0.29", features = ["rwh_05"], optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
cpal = { version = "0.15", optional = true }
ringbuf = { version = "0.4", optional = true }
anyhow = { version = "1.0", optional = true }
env_logger = { version = "0.10", optional = true }
png = { version = "0.17", optional = true }

[features]
default = []

desktop-bins = [
  "dep:anyhow",
  "dep:crossbeam-channel",
  "dep:pollster",
  "dep:winit",
  "dep:wgpu",
  "dep:bytemuck",
  "dep:cpal",
  "dep:ringbuf",
  "dep:env_logger",
  "dep:png",
]

[[bin]]
name = "wmv-decoder"
path = "src/bin/wmv_decoder_cli.rs"
required-features = ["desktop-bins"]

[[bin]]
name = "wmv-player-wgpu"
path = "src/bin/wmv_player_wgpu.rs"
required-features = ["desktop-bins"]
