[package]
name = "nvsg_pack"
version = "0.1.0"
edition = "2021"
description = "CLI packer and inspector for FAVORITE NVSG/HZC1 textures"
license = "MPL-2.0"

[[bin]]
name = "nvsg_pack"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
image = { version = "0.24.9", default-features = true }
