[package]
name = "rfvp-rebuilder"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
flate2 = "1"
rayon = "1"
rfvp_bitmap = { path = "../rfvp-bitmap" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
vorbis_rs = "0.5.5"
walkdir = "2"
