[package]
name = "rfvp-wii"
version = "0.1.0"
edition = "2021"
description = "Wii old-school host crate for rfvp no_std core"
license = "MPL-2.0"
publish = false

[lib]
name = "rfvp_wii"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
rfvp = { path = "../rfvp", default-features = false, features = ["no_std", "old_school"] }

[features]
default = []
old_school = []
entrypoint = ["old_school"]
